# fsort

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  README.rst  pyproject.toml  setup.cfg
fsort/: __main__.py
fsort/formatters/: __init__.py  base_formatter.py  fsort.py
