[tool.poetry]
name = "fsort"
version = "1.0.0"
description = ""
authors = ["Nripesh Niketan <nripesh14@gmail.com>"]
license = "Apache 2.0"
readme = "README.rst"
repository = "https://github.com/NripeshN/fsort"
packages = [{include = "fsort"}]

[tool.poetry.dependencies]
python = "^3.8"
untokenize = "^0.1.1"
black = "^23.3.0"
networkx = "^3.0"

[tool.poetry.scripts]
fsort = "fsortt.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"